--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
-<html>
+<!doctype html>
+<html lang="en">
     <head>
+        <title>My First Score Counter</title>
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        
         <div class="container">
             <div>
                 <h3>HOME</h3>
+                 <div>
+                    <span id="num1-el"></span>
+                </div>
+                <div>
+                    <button onclick="addUnoToNum1()">+1</button>
+                    <button onclick="addDosToNum1()">+2</button>
+                    <button onclick="addTresToNum1()">+3</button>
+                </div>
+                <button id="otherbutton">Reset Counter</button>
             </div>
             <div>
                 <h3>AWAY</h3>
+                 <div>
+                    <span id="num2-el"></span>
+                </div>
+                <button onclick="addUnoToNum2()">+1</button>
+                <button onclick="addDosToNum2()">+2</button>
+                <button onclick="addTresToNum2()">+3</button>
             </div>
         </div>
         <script src="index.js"></script>
