--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
                     <button onclick="addDosToNum1()">+2</button>
                     <button onclick="addTresToNum1()">+3</button>
                 </div>
-                <button id="otherbutton">Reset Counter</button>
             </div>
             <div>
                 <h3>AWAY</h3>
                  <div>
                     <span id="num2-el"></span>
                 </div>
-                <button onclick="addUnoToNum2()">+1</button>
-                <button onclick="addDosToNum2()">+2</button>
-                <button onclick="addTresToNum2()">+3</button>
+                <div>
+                    <button onclick="addUnoToNum2()">+1</button>
+                    <button onclick="addDosToNum2()">+2</button>
+                    <button onclick="addTresToNum2()">+3</button>
+                </div>
             </div>
         </div>
         <script src="index.js"></script>
